Bug #4677 Server crash with VIEWS + USE INDEX
Submitted: 21 Jul 2004 17:24 Modified: 23 Jul 2004 2:48
Reporter: Georg Richter Email Updates:
Status: Closed Impact on me:
None 
Category:MySQL Server Severity:S1 (Critical)
Version:5.0.1-alpha OS:Linux (Linux)
Assigned to: Oleksandr Byelkin CPU Architecture:Any

[21 Jul 2004 17:24] Georg Richter
Description:
When using USE INDEX on view, server crashes. 

How to repeat:
5.0.1-alpha-debug-log 
[16:27] root@MY1> SHOW CREATE TABLE SEOCLASS\G 
*************************** 1. row *************************** 
       Table: SEOCLASS 
Create Table: CREATE TABLE "SEOCLASS" ( 
  "CLSNAME" varchar(30) NOT NULL default '', 
  "CLSTYPE" char(1) NOT NULL default '0', 
  "UUID" tinyblob, 
  "REMOTE" char(1) NOT NULL default '', 
  PRIMARY KEY  ("CLSNAME"), 
  KEY "SEOCLASS~TYP" ("CLSTYPE"), 
  KEY "SEOCLASS~UID" ("UUID"(255)) 
) ENGINE=InnoDB DEFAULT CHARSET=latin1 
1 row in set (0.00 sec) 
 
5.0.1-alpha-debug-log 
[16:28] root@MY1> SHOW CREATE TABLE SEOCLASSDF\G 
*************************** 1. row *************************** 
       Table: SEOCLASSDF 
Create Table: CREATE TABLE "SEOCLASSDF" ( 
  "CLSNAME" varchar(30) NOT NULL default '', 
  "VERSION" char(1) NOT NULL default '0', 
  "CATEGORY" char(2) NOT NULL default '00', 
  "EXPOSURE" char(1) NOT NULL default '0', 
  "STATE" char(1) NOT NULL default '0', 
  "RELEASE" char(1) NOT NULL default '0', 
  "AUTHOR" varchar(12) NOT NULL default '', 
  "CREATEDON" varchar(8) NOT NULL default '00000000', 
  "CHANGEDBY" varchar(12) NOT NULL default '', 
  "CHANGEDON" varchar(8) NOT NULL default '00000000', 
  "CHGDANYBY" varchar(12) NOT NULL default '', 
  "CHGDANYON" varchar(8) NOT NULL default '00000000', 
  "CLSEMBED" char(1) NOT NULL default '', 
  "CLSABSTRCT" char(1) NOT NULL default '', 
  "CLSFINAL" char(1) NOT NULL default '', 
  "CLSCCINCL" char(1) NOT NULL default '', 
  "CLSDEFATT" varchar(61) NOT NULL default '', 
  "CLSDEFMTD" varchar(61) NOT NULL default '', 
  "REFCLSNAME" varchar(30) NOT NULL default '', 
  "FIXPT" char(1) NOT NULL default '', 
  "VARCL" char(1) NOT NULL default '', 
  "UNICODE" char(1) NOT NULL default '', 
  "RSTAT" char(1) NOT NULL default '', 
  "CLSBCIMPL" varchar(30) NOT NULL default '', 
  "R3RELEASE" varchar(10) NOT NULL default '', 
  "CLSBCTRANS" char(1) NOT NULL default '', 
  "CLSBCCAT" char(2) NOT NULL default '00', 
  "CLSBCNODEL" char(1) NOT NULL default '', 
  "CLSADDON" varchar(30) NOT NULL default '', 
  "MSG_ID" varchar(20) NOT NULL default '', 
  "CLSPROXY" char(1) NOT NULL default '', 
  "CLSSHAREDMEMORY" char(1) NOT NULL default '', 
  PRIMARY KEY  ("CLSNAME","VERSION") 
) ENGINE=InnoDB DEFAULT CHARSET=latin1 
1 row in set (0.00 sec) 
 
5.0.1-alpha-debug-log 
[16:28] root@MY1> SHOW CREATE TABLE SEOCLASSTX\G 
*************************** 1. row *************************** 
       Table: SEOCLASSTX 
Create Table: CREATE TABLE "SEOCLASSTX" ( 
  "CLSNAME" varchar(30) NOT NULL default '', 
  "LANGU" char(1) NOT NULL default '', 
  "DESCRIPT" varchar(60) NOT NULL default '', 
  PRIMARY KEY  ("CLSNAME","LANGU") 
) ENGINE=InnoDB DEFAULT CHARSET=latin1 
1 row in set (0.00 sec) 
 
5.0.1-alpha-debug-log 
[16:28] root@MY1> SHOW CREATE VIEW VSEOCLASS \G 
*************************** 1. row *************************** 
       Table: VSEOCLASS 
Create Table: CREATE VIEW MY1.VSEOCLASS AS select sql_no_cache 
MY1.T0001.CLSNAME AS `CLSNAME`,MY1.T0002.VERSION AS 
`VERSION`,MY1.T0003.LANGU AS `LANGU`,MY1.T0003.DESCRIPT AS 
`DESCRIPT`,MY1.T0001.UUID AS `UUID`,MY1.T0002.CATEGORY AS 
`CATEGORY`,MY1.T0002.EXPOSURE AS `EXPOSURE`,MY1.T0002.STATE AS 
`STATE`,MY1.T0002.RELEASE AS `RELEASE`,MY1.T0002.AUTHOR AS 
`AUTHOR`,MY1.T0002.CREATEDON AS `CREATEDON`,MY1.T0002.CHANGEDBY AS 
`CHANGEDBY`,MY1.T0002.CHANGEDON AS `CHANGEDON`,MY1.T0002.CHGDANYBY AS 
`CHGDANYBY`,MY1.T0002.CHGDANYON AS `CHGDANYON`,MY1.T0002.CLSEMBED AS 
`CLSEMBED`,MY1.T0002.CLSABSTRCT AS `CLSABSTRCT`,MY1.T0002.CLSFINAL AS 
`CLSFINAL`,MY1.T0002.CLSCCINCL AS `CLSCCINCL`,MY1.T0001.REMOTE AS 
`REMOTE`,MY1.T0002.FIXPT AS `FIXPT`,MY1.T0002.VARCL AS 
`VARCL`,MY1.T0002.UNICODE AS `UNICODE`,MY1.T0002.RSTAT AS 
`RSTAT`,MY1.T0002.CLSDEFATT AS `CLSDEFATT`,MY1.T0002.CLSDEFMTD AS 
`CLSDEFMTD`,MY1.T0002.REFCLSNAME AS `CLSDEFINT`,MY1.T0002.CLSBCIMPL AS 
`CLSBCIMPL`,MY1.T0002.R3RELEASE AS `R3RELEASE`,MY1.T0002.CLSBCTRANS AS 
`CLSBCTRANS`,MY1.T0002.CLSBCCAT AS `CLSBCCAT`,MY1.T0002.CLSADDON AS 
`CLSADDON`,MY1.T0002.MSG_ID AS `MSG_ID`,MY1.T0002.CLSBCNODEL AS 
`CLSBCNODEL`,MY1.T0002.CLSPROXY AS `CLSPROXY`,MY1.T0002.CLSSHAREDMEMORY 
AS `CLSSHAREDMEMORY` from (MY1.SEOCLASS T0001 join (MY1.SEOCLASSDF T0002 
join MY1.SEOCLASSTX T0003)) where ((MY1.T0001.CLSNAME = 
MY1.T0002.CLSNAME) and (MY1.T0001.CLSNAME = MY1.T0003.CLSNAME) and 
(MY1.T0001.CLSTYPE = _latin1'0')) 
1 row in set (0.01 sec) 
 
5.0.1-alpha-debug-log 
[16:28] root@MY1> select VERSION from VSEOCLASS USE INDEX (CLSNAME, 
CLSTYPE, UUID, REMOTE) where VERSION = '1' and CLSNAME = 
'CL_ACL_INTERNAL'; 
ERROR 2013 (HY000): Lost connection to MySQL server during query
[22 Jul 2004 13:06] Oleksandr Byelkin
ChangeSet 
  1.1725 04/07/22 14:05:00 bell@sanja.is.com.ua +3 -0 
  privent crash on temporary table during indexes lookup (BUG#4677)
[23 Jul 2004 2:48] Oleksandr Byelkin
Thank you for bugreport! Bugfix is pushed to our source repository.