privent crash on temporary table during indexes lookup (BUG#4677)

mysql-test/r/view.result:
  check 'use index' on view with temporary table
mysql-test/t/view.test:
  check 'use index' on view with temporary table
sql/sql_base.cc:
  privent crash on temporary table